# InstantInstaPhoto

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  AppState.hpp  Common.hpp  DetailModule.hpp  EditProjectModule.hpp  ErrorModule.hpp  ExportModule.hpp  Exporter.hpp  JsonHelper.hpp  MenuBarModule.hpp  Module.hpp  NewProjectModule.hpp  Object.hpp  ObjectContextModule.hpp  ObjectListModule.hpp  ProjectManager.hpp  SelectModule.hpp  Settings.hpp  SettingsWindow.hpp  SpriteObject.hpp
src/: App.cpp  AppState.cpp  DetailModule.cpp  EditProjectModule.cpp  ErrorModule.cpp  ExportModule.cpp  Exporter.cpp  JsonHelper.cpp  MenuBarModule.cpp  Module.cpp  NewProjectModule.cpp  Object.cpp  ObjectContextModule.cpp  ObjectListModule.cpp  ProjectManager.cpp  SelectModule.cpp  SettingsWindow.cpp  SpriteObject.cpp  main.cpp
